pkl-core/src/test/files/LanguageSnippetTests/input/errors/reference12.pkl
import "pkl:ref"

class D extends ref.Domain {
  function referenceToString(data: Any, path: List<ref.Access>): String = throw("not supported")
}
typealias RefAlias1 = ref.Reference<D, Alias1?>
local d: D = new {}

test = ref.Reference(d, String, "") as RefAlias1

typealias Alias1 = Int | Alias2?
typealias Alias2 = String(length < 5)
